labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx2
spec:
  containers:
  - image: nginx:1.15.8
    name: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: web
spec:
  containers:
  - image: nginx:1.15.8
    name: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: mongo
  labels:
    app: web
spec:
  containers:
  - image: mongo
    name: mongo
---
