storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
spec:
  selector:
    matchLabels:
      app: echo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: echo
    spec:
      volumes:
        - name: task-pv-storage
          persistentVolumeClaim:
            claimName: sample-pv-claim
        - name: config
          configMap:
            name: config-info
            items:
            - key: config.ini
              path: config.ini
      containers:
      - image: busybox
        name: echo
        volumeMounts:
          - mountPath: "/data"
            name: task-pv-storage
          - mountPath: "/etc/config"
            name: config
        command: ["ping", "127.0.0.1"]
